Fix list spacing

--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -86,6 +86,7 @@ li {
   > ol {
     margin-bottom: 0;
   }
+  margin-bottom: 15px;
 }
 
 
